--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="col-md-2"></div> -->
             <div class="btn-toolbar" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <button id="make-it-oscillate" type="button" class="btn btn-success btn-md">Make it oscillate</button>
+                <button id="draw-tile" type="button" class="btn btn-success btn-md">Draw tile</button>
               </div>
               <div class="btn-group mr-2" role="group" aria-label="Second group">
                 <button id="do-reset" type="button" class="btn btn-warning btn-md">Restart</button>
