tile top row fix

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h1>Tile placer</h1>
     <div class="row">
         <div class="col-md-3"></div>
-        <p class="lead col-md-6">Hi.</p>
+        <p class="lead col-md-6"></p>
       </div>
       <div id="canvas-container"></div>
       <div class="container">
@@ -101,7 +101,7 @@
           <div class="row">
             <div class="col-md-2"></div>
             <div class="btn-toolbar" role="toolbar" aria-label="button groups">
-              <div class="btn-group mr-2 btn-slider" role="group" aria-label="Second group">
+              <!-- <div class="btn-group mr-2 btn-slider" role="group" aria-label="Second group">
                 <div class="slider-container">
                   Contagion distance <input type="range" min="2" max="10" value="9" class="slider" id="slider-neighborhood-size">
                 </div>
@@ -120,7 +120,7 @@
                 <div class="slider-container">
                   Social distance <input type="range" min="0" max="10" value="0" class="slider" id="slider-social-distance">
                 </div>
-              </div>
+              </div> -->
             <!-- </div>
           </div>
           <br/><br/>
@@ -139,7 +139,7 @@
         <br>
         <div class="row">
             <div class="col-md-2"></div>
-            <p class="col-md-8" style="text-align:left;"><b>More details:</b><br/>
+            <p class="col-md-8" style="text-align:left;"><br/>
             </p>
           </div>
         </div>
