minor convenience fixes

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                 <button id="draw-tile" type="button" class="btn btn-success btn-md">Draw tile</button>
               </div>
               <div class="btn-group mr-2" role="group" aria-label="Second group">
+                <button id="reset-tile" type="button" class="btn btn-success btn-md">Reset last tile</button>
+              </div>
+              <div class="btn-group mr-2" role="group" aria-label="Second group">
                 <button id="do-reset" type="button" class="btn btn-warning btn-md">Restart</button>
               </div>
             </div>
