rendering goal cards

--- a/index.html
+++ b/index.html
@@ -137,6 +137,33 @@
                 <button id="do-reset" type="button" class="btn btn-warning btn-md">Restart</button>
               </div>
             </div>
+            <div class="btn-toolbar" role="toolbar" aria-label="button groups">
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  - 1 +
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  - 2 +
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  - 3 +
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  - 4 +
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  - 3 +
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <br>
