--- a/index.html
+++ b/index.html
@@ -99,33 +99,6 @@
           </div>
           <br>
           <div class="row">
-            <div class="col-md-2"></div>
-            <div class="btn-toolbar" role="toolbar" aria-label="button groups">
-              <!-- <div class="btn-group mr-2 btn-slider" role="group" aria-label="Second group">
-                <div class="slider-container">
-                  Contagion distance <input type="range" min="2" max="10" value="9" class="slider" id="slider-neighborhood-size">
-                </div>
-              </div>
-              <div class="btn-group mr-2 btn-slider" role="group" aria-label="Second group">
-                <div class="slider-container">
-                  Sickness duration <input type="range" min="0" max="10" value="0" class="slider" id="slider-sickness-duration">
-                </div>
-              </div>
-              <div class="btn-group mr-2 btn-slider" role="group" aria-label="Second group">
-                <div class="slider-container">
-                  Immunity duration <input type="range" min="0" max="10" value="0" class="slider" id="slider-immunity-duration">
-                </div>
-              </div>
-              <div class="btn-group mr-2 btn-slider" role="group" aria-label="Second group">
-                <div class="slider-container">
-                  Social distance <input type="range" min="0" max="10" value="0" class="slider" id="slider-social-distance">
-                </div>
-              </div> -->
-            <!-- </div>
-          </div>
-          <br/><br/>
-          <div class="row">
-            <div class="col-md-2"></div> -->
             <div class="btn-toolbar" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2" role="group" aria-label="Second group">
                 <button id="draw-tile" type="button" class="btn btn-success btn-md">Draw tile</button>
@@ -137,30 +110,61 @@
                 <button id="do-reset" type="button" class="btn btn-warning btn-md">Restart</button>
               </div>
             </div>
-            <div class="btn-toolbar" role="toolbar" aria-label="button groups">
+          </div>
+          <div class="row">
+            <div class="btn-toolbar player-controls player-1-controls" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  - 1 +
+                  <span class="counter-decrement">-</span> <span class="player-1 resource-1">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  - 2 +
+                  <span class="counter-decrement">-</span> <span class="player-1 resource-2">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  - 3 +
+                  <span class="counter-decrement">-</span> <span class="player-1 resource-3">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  - 4 +
+                  <span class="counter-decrement">-</span> <span class="player-1 resource-4">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  - 3 +
+                  <span class="counter-decrement">-</span> <span class="player-1 vp-1">0</span> <span class="counter-increment">+</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="btn-toolbar player-controls player-2-controls" role="toolbar" aria-label="button groups">
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">-</span> <span class="player-2 resource-1">0</span> <span class="counter-increment">+</span>
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">-</span> <span class="player-2 resource-2">0</span> <span class="counter-increment">+</span>
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">-</span> <span class="player-2 resource-3">0</span> <span class="counter-increment">+</span>
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">-</span> <span class="player-2 resource-4">0</span> <span class="counter-increment">+</span>
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">-</span> <span class="player-2 vp-1">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
             </div>
