fixing player scores

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           </div>
           <div class="row">
             <div class="btn-toolbar player-controls player-1-controls" role="toolbar" aria-label="button groups">
+              <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 1:</div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">-</span> <span class="player-1 resource-1">0</span> <span class="counter-increment">+</span>
@@ -142,6 +143,7 @@
           </div>
           <div class="row">
             <div class="btn-toolbar player-controls player-2-controls" role="toolbar" aria-label="button groups">
+              <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 2:</div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">-</span> <span class="player-2 resource-1">0</span> <span class="counter-increment">+</span>
