--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
                   <span class="counter-decrement">-</span> <span class="player-1 resource-4">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
+              <!-- <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="arrow-up"></span>
+                  <span class="arrow-up"></span>
+                </div>
+              </div> -->
               <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">-</span> <span class="player-1 vp-1">0</span> <span class="counter-increment">+</span>
