--- a/index.html
+++ b/index.html
@@ -99,19 +99,8 @@
           </div>
           <br>
           <div class="row">
-            <div class="btn-toolbar" role="toolbar" aria-label="button groups">
-              <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <button id="draw-tile" type="button" class="btn btn-success btn-md">Draw tile</button>
-              </div>
-              <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <button id="reset-tile" type="button" class="btn btn-warning btn-md">Reset last tile</button>
-              </div>
-              <!-- <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <button id="do-reset" type="button" class="btn btn-warning btn-md">Restart</button>
-              </div> -->
-            </div>
-          </div>
-          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-6">
             <div class="btn-toolbar player-controls player-1-controls" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 1:</div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
@@ -146,8 +135,11 @@
                 </div>
               </div>
             </div>
+            </div>
           </div>
           <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-6">
             <div class="btn-toolbar player-controls player-2-controls" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 2:</div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
@@ -175,6 +167,7 @@
                   <span class="counter-decrement">-</span> <span class="player-2 vp-1">0</span> <span class="counter-increment">+</span>
                 </div>
               </div>
+            </div>
             </div>
           </div>
         </div>
