--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
               <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 1:</div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-1 resource-1">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-1 resource-2">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-2">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-1 resource-3">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-3">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-1 resource-4">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-4">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <!-- <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
@@ -131,7 +131,7 @@
               </div> -->
               <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-1 vp-1">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-1 vp-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
             </div>
@@ -144,27 +144,27 @@
               <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 2:</div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-2 resource-1">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-2 resource-2">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-2">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-2 resource-3">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-3">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-2 resource-4">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-4">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="counter-decrement">-</span> <span class="player-2 vp-1">0</span> <span class="counter-increment">+</span>
+                  <span class="counter-decrement">&ndash;</span> <span class="player-2 vp-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
             </div>
