--- a/index.html
+++ b/index.html
@@ -102,34 +102,33 @@
             <div class="col-md-4"></div>
             <div class="col-md-6">
             <div class="btn-toolbar player-controls player-1-controls" role="toolbar" aria-label="button groups">
-              <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 1:</div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-player no-select" role="group" aria-label="Second group">Player 1:</div>
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-2">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-3">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-4">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <!-- <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-portal no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
-                  <span class="arrow-up"></span>
-                  <span class="arrow-up"></span>
+                  <span class="portal player-1 portal-1">△</span><span class="portal player-1 portal-2">△</span>
                 </div>
-              </div> -->
-              <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-vp no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 vp-1">0</span> <span class="counter-increment">＋</span>
                 </div>
@@ -141,28 +140,33 @@
             <div class="col-md-4"></div>
             <div class="col-md-6">
             <div class="btn-toolbar player-controls player-2-controls" role="toolbar" aria-label="button groups">
-              <div class="btn-group mr-2 btn-slider btn-player" role="group" aria-label="Second group">Player 2:</div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-player no-select" role="group" aria-label="Second group">Player 2:</div>
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-2">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-3">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-resource" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-4">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
-              <div class="btn-group mr-2 btn-slider btn-vp" role="group" aria-label="Second group">
+              <div class="btn-group mr-2 btn-slider btn-portal no-select" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="portal player-2 portal-1">△</span><span class="portal player-2 portal-2">△</span>
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-vp no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 vp-1">0</span> <span class="counter-increment">＋</span>
                 </div>
