--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 vp-1">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
+              <div class="btn-group mr-2" role="group" aria-label="Second group">
+                <button id="buy-1" type="button" class="btn btn-sm btn-buy">Buy</button>
+              </div>
             </div>
             </div>
           </div>
@@ -170,6 +173,9 @@
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 vp-1">0</span> <span class="counter-increment">＋</span>
                 </div>
+              </div>
+              <div class="btn-group mr-2" role="group" aria-label="Second group">
+                <button id="buy-2" type="button" class="btn btn-sm btn-buy">Buy</button>
               </div>
             </div>
             </div>
