missing a resource color

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         </div> -->
         <div class="container">
           <div class="row">
-            <div class="col-md-2"></div>
+            <!-- <div class="col-md-2"></div> -->
             <div class="col-md-8 text-justify">
               <div id="sketch-holder"></div>
             </div>
           </div>
           <br>
           <div class="row">
-            <div class="col-md-4"></div>
+            <div class="col-md-2"></div>
             <div class="col-md-6">
             <div class="btn-toolbar player-controls player-1-controls" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2 btn-slider btn-player no-select" role="group" aria-label="Second group">Player 1:</div>
@@ -123,6 +123,11 @@
                   <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-4">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">&ndash;</span> <span class="player-1 resource-5">0</span> <span class="counter-increment">＋</span>
+                </div>
+              </div>
               <div class="btn-group mr-2 btn-slider btn-portal no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="portal player-1 portal-1">△</span><span class="portal player-1 portal-2">△</span>
@@ -140,7 +145,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-4"></div>
+            <div class="col-md-2"></div>
             <div class="col-md-6">
             <div class="btn-toolbar player-controls player-2-controls" role="toolbar" aria-label="button groups">
               <div class="btn-group mr-2 btn-slider btn-player no-select" role="group" aria-label="Second group">Player 2:</div>
@@ -162,6 +167,11 @@
               <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
                 <div class="counter-container">
                   <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-4">0</span> <span class="counter-increment">＋</span>
+                </div>
+              </div>
+              <div class="btn-group mr-2 btn-slider btn-resource no-select" role="group" aria-label="Second group">
+                <div class="counter-container">
+                  <span class="counter-decrement">&ndash;</span> <span class="player-2 resource-5">0</span> <span class="counter-increment">＋</span>
                 </div>
               </div>
               <div class="btn-group mr-2 btn-slider btn-portal no-select" role="group" aria-label="Second group">
