fixing rotating tile issue fixes #1

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav> -->
   <div class="container">
     <div class="main-container">
-      <h1>Tile placer</h1>
+      <!-- <h1>Tile placer</h1> -->
     <div class="row">
         <div class="col-md-3"></div>
         <p class="lead col-md-6"></p>
