--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="simulate transition between swarming and flocking">
   <meta name="author" content="mobeets">
   <link rel="icon" href="static/favicon.ico">
-  <title>Tile placer</title>
+  <title>Gourmant</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
@@ -55,12 +55,12 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="https://mobeets.github.io">mobeets</a>
-        <p class="navbar-text">Tile placer</p>
+        <p class="navbar-text">Gourmant</p>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/mobeets/"><i class="fa fa-github" aria-hidden="true"></i> View on Github</a></li>
+          <li><a href="https://github.com/mobeets/gourmant-js"><i class="fa fa-github" aria-hidden="true"></i> View on Github</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
