--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> View on Github</a></li>
       </ul>
     </nav> -->
-  <div class="container">
+  <div class="container no-select">
     <div class="main-container">
       <!-- <h1>Tile placer</h1> -->
     <div class="row">
